--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version='1.0' encoding='utf-8'?>
 <resources>
-    <string name="app_name">app-alarma-robo</string>
-    <string name="title_activity_main">app-alarma-robo</string>
-    <string name="package_name">io.ionic.starter</string>
-    <string name="custom_url_scheme">io.ionic.starter</string>
+    <string name="app_name">Alarma Robo</string>
+    <string name="title_activity_main">Alarma Robo</string>
+    <string name="package_name">io.ionic.alarmaRobo</string>
+    <string name="custom_url_scheme">io.ionic.alarmaRobo</string>
 </resources>
